// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImportRunFormComponent > should render import-form step 1`] = `
<DocumentFragment>
  <div
    aria-describedby="radix-:r2:"
    aria-labelledby="radix-:r1:"
    data-state="open"
    id="radix-:r0:"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <div>
      <h2
        class="text-lg font-medium leading-6 text-gray-900"
        id="radix-:r1:"
      >
        Import runs
      </h2>
      <p
        class="mt-2 mb-6 text-sm font-normal text-gray-700"
        id="radix-:r2:"
      >
        You can 
        <strong>
          paste
        </strong>
         URL's of runs you want to import. 
        <br />
        URL's should be separated by a 
        <strong>
          new line
        </strong>
         or 
        <strong>
          space
        </strong>
        .
      </p>
      <form
        class="flex flex-col gap-4 mt-2"
      >
        <div
          class="flex flex-col gap-4"
        >
          <div
            class="grid grid-cols-[1fr,min-content,min-content,min-content] gap-y-2 gap-x-4"
          >
            <div
              class="grid items-center"
            >
              <span
                class="text-xs font-bold tracking-wider uppercase"
              >
                URL
              </span>
            </div>
            <div
              class="grid items-center"
            >
              <span
                class="text-xs font-bold tracking-wider uppercase"
              >
                RANGE
              </span>
            </div>
            <div
              class="grid items-center"
            >
              <span
                class="text-xs font-bold tracking-wider uppercase"
              >
                FORCE
              </span>
            </div>
            <div
              class="grid items-center"
            >
              <span
                class="text-xs font-bold tracking-wider uppercase"
              />
            </div>
            <div
              class="grid items-center"
            >
              <div
                class="relative"
              >
                <div
                  class="flex items-center gap-3"
                >
                  <input
                    autocomplete="off"
                    class="w-full px-3.5 py-[7px] outline-none border border-border-primary rounded text-text-secondary transition-all hover:border-primary disabled:text-text-menu disabled:cursor-not-allowed placeholder:text-text-menu focus:border-primary focus:shadow-text-field active:shadow-none focus:ring-transparent"
                    control="[object Object]"
                    data-testid="input"
                    id="runs.0.url"
                    name="runs.0.url"
                    placeholder="Url 1"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="grid items-center"
            >
              <div
                class="relative flex w-full gap-1"
              >
                <div
                  class="relative inline-flex flex-col w-full text-left"
                >
                  <span
                    class="absolute top-[-11px] left-2 z-10 bg-white font-normal text-text-secondary text-[0.875rem] sr-only"
                    id="react-aria4421674947-2"
                  >
                    Range
                  </span>
                  <div
                    aria-labelledby="react-aria4421674947-2"
                    class="flex group"
                    id="react-aria4421674947-1"
                    role="group"
                  >
                    <div
                      class="relative flex items-center w-full h-10 px-2 transition-all bg-white border rounded-md border-border-primary group-hover:border-primary group-focus-within:border-primary group-focus-within:shadow-text-field group-active:shadow-none"
                    >
                      <div
                        class="flex items-center justify-between w-full h-full gap-2"
                      >
                        <div
                          class="flex items-center justify-between w-full h-full"
                        >
                          <div
                            class="relative flex items-center h-full"
                            role="presentation"
                          >
                            <div
                              aria-label="Start Date year"
                              aria-labelledby="react-aria4421674947-2 react-aria4421674947-11"
                              aria-valuemax="9999"
                              aria-valuemin="1"
                              aria-valuenow="2023"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-11"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 4ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                yyyy
                              </span>
                            </div>
                            <div
                              aria-hidden="true"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-500"
                              style="text-align: center;"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="visibility: hidden; height: 0px; pointer-events: none;"
                              />
                              <span
                                class="text-[0.875rem] font-medium leading-[1.5rem] text-text-primary group-focus:text-white"
                              >
                                .
                              </span>
                            </div>
                            <div
                              aria-label="Start Date month"
                              aria-labelledby="react-aria4421674947-2 react-aria4421674947-15"
                              aria-valuemax="12"
                              aria-valuemin="1"
                              aria-valuenow="9"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-15"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 2ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                mm
                              </span>
                            </div>
                            <div
                              aria-hidden="true"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-500"
                              style="text-align: center;"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="visibility: hidden; height: 0px; pointer-events: none;"
                              />
                              <span
                                class="text-[0.875rem] font-medium leading-[1.5rem] text-text-primary group-focus:text-white"
                              >
                                .
                              </span>
                            </div>
                            <div
                              aria-label="Start Date day"
                              aria-labelledby="react-aria4421674947-2 react-aria4421674947-19"
                              aria-valuemax="30"
                              aria-valuemin="1"
                              aria-valuenow="9"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-19"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 2ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                dd
                              </span>
                            </div>
                          </div>
                          <span
                            aria-hidden="true"
                            class="px-2"
                          >
                            –
                          </span>
                          <div
                            class="relative flex items-center h-full"
                            role="presentation"
                          >
                            <div
                              aria-label="End Date year"
                              aria-labelledby="react-aria4421674947-2 react-aria4421674947-25"
                              aria-valuemax="9999"
                              aria-valuemin="1"
                              aria-valuenow="2023"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-25"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 4ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                yyyy
                              </span>
                            </div>
                            <div
                              aria-hidden="true"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-500"
                              style="text-align: center;"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="visibility: hidden; height: 0px; pointer-events: none;"
                              />
                              <span
                                class="text-[0.875rem] font-medium leading-[1.5rem] text-text-primary group-focus:text-white"
                              >
                                .
                              </span>
                            </div>
                            <div
                              aria-label="End Date month"
                              aria-labelledby="react-aria4421674947-2 react-aria4421674947-29"
                              aria-valuemax="12"
                              aria-valuemin="1"
                              aria-valuenow="9"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-29"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 2ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                mm
                              </span>
                            </div>
                            <div
                              aria-hidden="true"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-500"
                              style="text-align: center;"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="visibility: hidden; height: 0px; pointer-events: none;"
                              />
                              <span
                                class="text-[0.875rem] font-medium leading-[1.5rem] text-text-primary group-focus:text-white"
                              >
                                .
                              </span>
                            </div>
                            <div
                              aria-label="End Date day"
                              aria-labelledby="react-aria4421674947-2 react-aria4421674947-33"
                              aria-valuemax="30"
                              aria-valuemin="1"
                              aria-valuenow="9"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-33"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 2ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                dd
                              </span>
                            </div>
                          </div>
                          <div
                            class="flex items-center gap-4 pl-3"
                          >
                            <button
                              aria-controls="radix-:r3:"
                              aria-haspopup="dialog"
                              aria-label="Calendar"
                              aria-labelledby="react-aria4421674947-2 react-aria4421674947-5"
                              data-state="closed"
                              id="react-aria4421674947-5"
                              type="button"
                            >
                              <svg
                                class="transition-colors text-text-menu hover:text-primary"
                                fill="none"
                                height="24"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M16.4522 2.73508V3.76997C19.4609 4.06186 21 5.72477 21 8.71446V16.9848C21 20.3106 19.1043 22 15.3739 22H8.62609C4.89565 22 3 20.3106 3 16.9848V8.71446C3 6.72428 3.67826 5.30019 5.06957 4.46874C5.28888 4.31904 5.57263 4.30859 5.80202 4.44176C6.0314 4.57494 6.16687 4.82876 6.15169 5.09698C6.13652 5.3652 5.97333 5.60155 5.73043 5.70708C4.8087 6.25548 4.37391 7.21077 4.37391 8.71446V8.97981H17.0609C17.4403 8.97981 17.7478 9.29266 17.7478 9.67859C17.7478 10.0645 17.4403 10.3774 17.0609 10.3774H4.37391V16.9848C4.37391 19.5233 5.6087 20.5759 8.62609 20.5936H15.3739C18.3478 20.5936 19.6174 19.5145 19.6174 16.9759V8.70561C19.6174 6.4943 18.6522 5.42403 16.4522 5.16752V5.83975C16.4014 6.19806 16.093 6.45964 15.7374 6.44599C15.3818 6.43234 15.0936 6.14786 15.0696 5.78668V2.67316C15.0763 2.48618 15.1565 2.30977 15.2921 2.18341C15.4278 2.05706 15.6076 1.99132 15.7913 2.00092C16.17 2.02461 16.4623 2.34923 16.4522 2.73508ZM8.70877 6.29279C8.57806 6.42409 8.40109 6.49667 8.21739 6.4943C7.8414 6.48465 7.54295 6.16923 7.54783 5.78668V2.73508C7.58736 2.37709 7.88498 2.10645 8.23913 2.10645C8.59328 2.10645 8.8909 2.37709 8.93043 2.73508V3.69921H12.8609C13.2403 3.69921 13.5478 4.01206 13.5478 4.39798C13.5478 4.7839 13.2403 5.09675 12.8609 5.09675H8.91304V5.79553C8.91306 5.9824 8.83949 6.16149 8.70877 6.29279ZM16.1913 12.6152C15.7111 12.6152 15.3217 13.0112 15.3217 13.4997C15.3217 13.9882 15.7111 14.3843 16.1913 14.3843C16.6716 14.3843 17.0609 13.9882 17.0609 13.4997C17.0609 13.2636 16.9681 13.0373 16.8031 12.8711C16.6382 12.705 16.4147 12.6128 16.1826 12.6152H16.1913ZM11.1478 13.4997C11.1478 13.0112 11.5371 12.6152 12.0174 12.6152C12.4976 12.6152 12.887 13.0112 12.887 13.4997C12.887 13.9882 12.4976 14.3843 12.0174 14.3843C11.5371 14.3843 11.1478 13.9882 11.1478 13.4997ZM7.85217 12.6152C7.37193 12.6152 6.98261 13.0112 6.98261 13.4997C6.98261 13.9882 7.37193 14.3843 7.85217 14.3843C8.33242 14.3843 8.72174 13.9882 8.72174 13.4997C8.72175 13.2636 8.62894 13.0373 8.46398 12.8711C8.29902 12.705 8.0756 12.6128 7.84348 12.6152H7.85217ZM15.3217 17.082C15.3217 16.5935 15.7111 16.1975 16.1913 16.1975H16.1826C16.4147 16.1952 16.6382 16.2873 16.8031 16.4534C16.9681 16.6196 17.0609 16.8459 17.0609 17.082C17.0609 17.5706 16.6716 17.9666 16.1913 17.9666C15.7111 17.9666 15.3217 17.5706 15.3217 17.082ZM12.0174 16.1975C11.5371 16.1975 11.1478 16.5935 11.1478 17.082C11.1478 17.5706 11.5371 17.9666 12.0174 17.9666C12.4976 17.9666 12.887 17.5706 12.887 17.082C12.887 16.5935 12.4976 16.1975 12.0174 16.1975ZM6.98261 17.082C6.98261 16.5935 7.37193 16.1975 7.85217 16.1975H7.84348C8.0756 16.1952 8.29902 16.2873 8.46398 16.4534C8.62894 16.6196 8.72175 16.8459 8.72174 17.082C8.72174 17.5706 8.33242 17.9666 7.85217 17.9666C7.37193 17.9666 6.98261 17.5706 6.98261 17.082Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="items-center grid place-items-center"
            >
              <div
                class="flex items-center"
              >
                <button
                  aria-checked="false"
                  class="grid w-6 h-6 bg-white rounded place-items-center border relative border-border-primary"
                  control="[object Object]"
                  data-state="unchecked"
                  data-testid="tw-checkbox"
                  role="checkbox"
                  type="button"
                  value="on"
                />
                <input
                  aria-hidden="true"
                  name="runs.0.force"
                  style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                  tabindex="-1"
                  type="checkbox"
                  value="on"
                />
                <label
                  class="pl-2"
                  for="runs.0.force"
                />
              </div>
            </div>
            <div
              class="items-center grid place-items-center"
            >
              <button
                class="grid p-0 rounded text-text-unexpected hover:bg-red-100 place-items-center"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 20 20"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.47 4.47a.75.75 0 1 1 1.06 1.06L10.56 9.5l3.97 3.97a.75.75 0 1 1-1.06 1.06L9.5 10.56l-3.97 3.97a.75.75 0 0 1-1.06-1.06L8.44 9.5 4.47 5.53a.75.75 0 0 1 1.06-1.06L9.5 8.44l3.97-3.97Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-all appearance-none select-none border border-border-primary text-text-primary hover:bg-gray-50 disabled:bg-white disabled:hover:bg-white disabled:text-text-menu px-3 py-[7px] text-[0.875rem] leading-[1.5rem] rounded-lg"
            type="button"
          >
            Add URL
          </button>
        </div>
        <div
          class="mt-4"
        >
          <button
            class="inline-flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-all appearance-none select-none bg-primary text-white disabled:shadow-[inset_0_0_0_1px_var(--colors-border-primary)] disabled:bg-white disabled:hover:bg-white disabled:text-text-menu px-3 text-[0.875rem] leading-[1.5rem] rounded-lg hover:shadow-[inset_0_0_0_3px_#94b0ff] py-2 w-full"
            type="submit"
          >
            Start Import
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImportRunFormComponent > should render import-form step 2`] = `
<DocumentFragment>
  <div
    aria-describedby="radix-:r6:"
    aria-labelledby="radix-:r5:"
    data-state="open"
    id="radix-:r4:"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <div>
      <h2
        class="text-lg font-medium leading-6 text-gray-900"
        id="radix-:r5:"
      >
        Import runs
      </h2>
      <p
        class="mt-2 mb-6 text-sm font-normal text-gray-700"
        id="radix-:r6:"
      >
        You can 
        <strong>
          paste
        </strong>
         URL's of runs you want to import. 
        <br />
        URL's should be separated by a 
        <strong>
          new line
        </strong>
         or 
        <strong>
          space
        </strong>
        .
      </p>
      <form
        class="flex flex-col gap-4 mt-2"
      >
        <div
          class="flex flex-col gap-4"
        >
          <div
            class="grid grid-cols-[1fr,min-content,min-content,min-content] gap-y-2 gap-x-4"
          >
            <div
              class="grid items-center"
            >
              <span
                class="text-xs font-bold tracking-wider uppercase"
              >
                URL
              </span>
            </div>
            <div
              class="grid items-center"
            >
              <span
                class="text-xs font-bold tracking-wider uppercase"
              >
                RANGE
              </span>
            </div>
            <div
              class="grid items-center"
            >
              <span
                class="text-xs font-bold tracking-wider uppercase"
              >
                FORCE
              </span>
            </div>
            <div
              class="grid items-center"
            >
              <span
                class="text-xs font-bold tracking-wider uppercase"
              />
            </div>
            <div
              class="grid items-center"
            >
              <div
                class="relative"
              >
                <div
                  class="flex items-center gap-3"
                >
                  <input
                    autocomplete="off"
                    class="w-full px-3.5 py-[7px] outline-none border border-border-primary rounded text-text-secondary transition-all hover:border-primary disabled:text-text-menu disabled:cursor-not-allowed placeholder:text-text-menu focus:border-primary focus:shadow-text-field active:shadow-none focus:ring-transparent"
                    control="[object Object]"
                    data-testid="input"
                    id="runs.0.url"
                    name="runs.0.url"
                    placeholder="Url 1"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="grid items-center"
            >
              <div
                class="relative flex w-full gap-1"
              >
                <div
                  class="relative inline-flex flex-col w-full text-left"
                >
                  <span
                    class="absolute top-[-11px] left-2 z-10 bg-white font-normal text-text-secondary text-[0.875rem] sr-only"
                    id="react-aria4421674947-36"
                  >
                    Range
                  </span>
                  <div
                    aria-labelledby="react-aria4421674947-36"
                    class="flex group"
                    id="react-aria4421674947-35"
                    role="group"
                  >
                    <div
                      class="relative flex items-center w-full h-10 px-2 transition-all bg-white border rounded-md border-border-primary group-hover:border-primary group-focus-within:border-primary group-focus-within:shadow-text-field group-active:shadow-none"
                    >
                      <div
                        class="flex items-center justify-between w-full h-full gap-2"
                      >
                        <div
                          class="flex items-center justify-between w-full h-full"
                        >
                          <div
                            class="relative flex items-center h-full"
                            role="presentation"
                          >
                            <div
                              aria-label="Start Date year"
                              aria-labelledby="react-aria4421674947-36 react-aria4421674947-45"
                              aria-valuemax="9999"
                              aria-valuemin="1"
                              aria-valuenow="2023"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-45"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 4ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                yyyy
                              </span>
                            </div>
                            <div
                              aria-hidden="true"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-500"
                              style="text-align: center;"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="visibility: hidden; height: 0px; pointer-events: none;"
                              />
                              <span
                                class="text-[0.875rem] font-medium leading-[1.5rem] text-text-primary group-focus:text-white"
                              >
                                .
                              </span>
                            </div>
                            <div
                              aria-label="Start Date month"
                              aria-labelledby="react-aria4421674947-36 react-aria4421674947-49"
                              aria-valuemax="12"
                              aria-valuemin="1"
                              aria-valuenow="9"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-49"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 2ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                mm
                              </span>
                            </div>
                            <div
                              aria-hidden="true"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-500"
                              style="text-align: center;"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="visibility: hidden; height: 0px; pointer-events: none;"
                              />
                              <span
                                class="text-[0.875rem] font-medium leading-[1.5rem] text-text-primary group-focus:text-white"
                              >
                                .
                              </span>
                            </div>
                            <div
                              aria-label="Start Date day"
                              aria-labelledby="react-aria4421674947-36 react-aria4421674947-53"
                              aria-valuemax="30"
                              aria-valuemin="1"
                              aria-valuenow="9"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-53"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 2ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                dd
                              </span>
                            </div>
                          </div>
                          <span
                            aria-hidden="true"
                            class="px-2"
                          >
                            –
                          </span>
                          <div
                            class="relative flex items-center h-full"
                            role="presentation"
                          >
                            <div
                              aria-label="End Date year"
                              aria-labelledby="react-aria4421674947-36 react-aria4421674947-59"
                              aria-valuemax="9999"
                              aria-valuemin="1"
                              aria-valuenow="2023"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-59"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 4ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                yyyy
                              </span>
                            </div>
                            <div
                              aria-hidden="true"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-500"
                              style="text-align: center;"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="visibility: hidden; height: 0px; pointer-events: none;"
                              />
                              <span
                                class="text-[0.875rem] font-medium leading-[1.5rem] text-text-primary group-focus:text-white"
                              >
                                .
                              </span>
                            </div>
                            <div
                              aria-label="End Date month"
                              aria-labelledby="react-aria4421674947-36 react-aria4421674947-63"
                              aria-valuemax="12"
                              aria-valuemin="1"
                              aria-valuenow="9"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-63"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 2ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                mm
                              </span>
                            </div>
                            <div
                              aria-hidden="true"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-500"
                              style="text-align: center;"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="visibility: hidden; height: 0px; pointer-events: none;"
                              />
                              <span
                                class="text-[0.875rem] font-medium leading-[1.5rem] text-text-primary group-focus:text-white"
                              >
                                .
                              </span>
                            </div>
                            <div
                              aria-label="End Date day"
                              aria-labelledby="react-aria4421674947-36 react-aria4421674947-67"
                              aria-valuemax="30"
                              aria-valuemin="1"
                              aria-valuenow="9"
                              aria-valuetext="Empty"
                              autocapitalize="off"
                              autocorrect="off"
                              class="box-content tabular-nums text-right outline-none rounded-sm focus:bg-primary focus:text-white group text-gray-800"
                              contenteditable="true"
                              data-placeholder="true"
                              enterkeyhint="next"
                              id="react-aria4421674947-67"
                              inputmode="numeric"
                              role="spinbutton"
                              spellcheck="false"
                              style="caret-color: transparent; min-width: 2ch; text-align: center;"
                              tabindex="0"
                            >
                              <span
                                aria-hidden="true"
                                class="block w-full text-[0.875rem] font-medium leading-[1.5rem] text-text-primary  group-focus:text-white"
                                style="pointer-events: none;"
                              >
                                dd
                              </span>
                            </div>
                          </div>
                          <div
                            class="flex items-center gap-4 pl-3"
                          >
                            <button
                              aria-controls="radix-:r7:"
                              aria-haspopup="dialog"
                              aria-label="Calendar"
                              aria-labelledby="react-aria4421674947-36 react-aria4421674947-39"
                              data-state="closed"
                              id="react-aria4421674947-39"
                              type="button"
                            >
                              <svg
                                class="transition-colors text-text-menu hover:text-primary"
                                fill="none"
                                height="24"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M16.4522 2.73508V3.76997C19.4609 4.06186 21 5.72477 21 8.71446V16.9848C21 20.3106 19.1043 22 15.3739 22H8.62609C4.89565 22 3 20.3106 3 16.9848V8.71446C3 6.72428 3.67826 5.30019 5.06957 4.46874C5.28888 4.31904 5.57263 4.30859 5.80202 4.44176C6.0314 4.57494 6.16687 4.82876 6.15169 5.09698C6.13652 5.3652 5.97333 5.60155 5.73043 5.70708C4.8087 6.25548 4.37391 7.21077 4.37391 8.71446V8.97981H17.0609C17.4403 8.97981 17.7478 9.29266 17.7478 9.67859C17.7478 10.0645 17.4403 10.3774 17.0609 10.3774H4.37391V16.9848C4.37391 19.5233 5.6087 20.5759 8.62609 20.5936H15.3739C18.3478 20.5936 19.6174 19.5145 19.6174 16.9759V8.70561C19.6174 6.4943 18.6522 5.42403 16.4522 5.16752V5.83975C16.4014 6.19806 16.093 6.45964 15.7374 6.44599C15.3818 6.43234 15.0936 6.14786 15.0696 5.78668V2.67316C15.0763 2.48618 15.1565 2.30977 15.2921 2.18341C15.4278 2.05706 15.6076 1.99132 15.7913 2.00092C16.17 2.02461 16.4623 2.34923 16.4522 2.73508ZM8.70877 6.29279C8.57806 6.42409 8.40109 6.49667 8.21739 6.4943C7.8414 6.48465 7.54295 6.16923 7.54783 5.78668V2.73508C7.58736 2.37709 7.88498 2.10645 8.23913 2.10645C8.59328 2.10645 8.8909 2.37709 8.93043 2.73508V3.69921H12.8609C13.2403 3.69921 13.5478 4.01206 13.5478 4.39798C13.5478 4.7839 13.2403 5.09675 12.8609 5.09675H8.91304V5.79553C8.91306 5.9824 8.83949 6.16149 8.70877 6.29279ZM16.1913 12.6152C15.7111 12.6152 15.3217 13.0112 15.3217 13.4997C15.3217 13.9882 15.7111 14.3843 16.1913 14.3843C16.6716 14.3843 17.0609 13.9882 17.0609 13.4997C17.0609 13.2636 16.9681 13.0373 16.8031 12.8711C16.6382 12.705 16.4147 12.6128 16.1826 12.6152H16.1913ZM11.1478 13.4997C11.1478 13.0112 11.5371 12.6152 12.0174 12.6152C12.4976 12.6152 12.887 13.0112 12.887 13.4997C12.887 13.9882 12.4976 14.3843 12.0174 14.3843C11.5371 14.3843 11.1478 13.9882 11.1478 13.4997ZM7.85217 12.6152C7.37193 12.6152 6.98261 13.0112 6.98261 13.4997C6.98261 13.9882 7.37193 14.3843 7.85217 14.3843C8.33242 14.3843 8.72174 13.9882 8.72174 13.4997C8.72175 13.2636 8.62894 13.0373 8.46398 12.8711C8.29902 12.705 8.0756 12.6128 7.84348 12.6152H7.85217ZM15.3217 17.082C15.3217 16.5935 15.7111 16.1975 16.1913 16.1975H16.1826C16.4147 16.1952 16.6382 16.2873 16.8031 16.4534C16.9681 16.6196 17.0609 16.8459 17.0609 17.082C17.0609 17.5706 16.6716 17.9666 16.1913 17.9666C15.7111 17.9666 15.3217 17.5706 15.3217 17.082ZM12.0174 16.1975C11.5371 16.1975 11.1478 16.5935 11.1478 17.082C11.1478 17.5706 11.5371 17.9666 12.0174 17.9666C12.4976 17.9666 12.887 17.5706 12.887 17.082C12.887 16.5935 12.4976 16.1975 12.0174 16.1975ZM6.98261 17.082C6.98261 16.5935 7.37193 16.1975 7.85217 16.1975H7.84348C8.0756 16.1952 8.29902 16.2873 8.46398 16.4534C8.62894 16.6196 8.72175 16.8459 8.72174 17.082C8.72174 17.5706 8.33242 17.9666 7.85217 17.9666C7.37193 17.9666 6.98261 17.5706 6.98261 17.082Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="items-center grid place-items-center"
            >
              <div
                class="flex items-center"
              >
                <button
                  aria-checked="false"
                  class="grid w-6 h-6 bg-white rounded place-items-center border relative border-border-primary"
                  control="[object Object]"
                  data-state="unchecked"
                  data-testid="tw-checkbox"
                  role="checkbox"
                  type="button"
                  value="on"
                />
                <input
                  aria-hidden="true"
                  name="runs.0.force"
                  style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                  tabindex="-1"
                  type="checkbox"
                  value="on"
                />
                <label
                  class="pl-2"
                  for="runs.0.force"
                />
              </div>
            </div>
            <div
              class="items-center grid place-items-center"
            >
              <button
                class="grid p-0 rounded text-text-unexpected hover:bg-red-100 place-items-center"
              >
                <svg
                  fill="none"
                  height="24"
                  viewBox="0 0 20 20"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M13.47 4.47a.75.75 0 1 1 1.06 1.06L10.56 9.5l3.97 3.97a.75.75 0 1 1-1.06 1.06L9.5 10.56l-3.97 3.97a.75.75 0 0 1-1.06-1.06L8.44 9.5 4.47 5.53a.75.75 0 0 1 1.06-1.06L9.5 8.44l3.97-3.97Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <button
            class="inline-flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-all appearance-none select-none border border-border-primary text-text-primary hover:bg-gray-50 disabled:bg-white disabled:hover:bg-white disabled:text-text-menu px-3 py-[7px] text-[0.875rem] leading-[1.5rem] rounded-lg"
            type="button"
          >
            Add URL
          </button>
        </div>
        <div
          class="mt-4"
        >
          <button
            class="inline-flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-all appearance-none select-none bg-primary text-white disabled:shadow-[inset_0_0_0_1px_var(--colors-border-primary)] disabled:bg-white disabled:hover:bg-white disabled:text-text-menu px-3 text-[0.875rem] leading-[1.5rem] rounded-lg hover:shadow-[inset_0_0_0_3px_#94b0ff] py-2 w-full"
            type="submit"
          >
            Start Import
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
